feat: update Dockerfile, docker-compose and README for better Docker usage
This commit updates the Dockerfile to use a more docker-friendly approach. Instead of cloning the repository inside the Dockerfile, it now copies the files from the host. It also sets some fixed environment variables and uses a .env file for the rest.

The docker-compose.yml file now uses an .env file for more convenient environment variable management. It also maps volumes to the host, allowing you to change the paths of the `db` folder and `templates` folder.

The README.md has been updated with new instructions reflecting these changes. It now includes instructions for running the Docker container in the foreground or background, and for updating the relay.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ RELAY_DESCRIPTION="Only notes in utxo WoT"
 RELAY_URL="wss://wot.utxo.one"
 DB_PATH="db"
 INDEX_PATH="templates/index.html"
+STATIC_PATH="templates/static"
