feat: add optional Tor support with clearnet toggle
Added support for optionally running the wot-relay service as a Tor hidden service. Updated the docker-compose.tor.yml file to conditionally enable clearnet access, based on the `ENABLE_CLEARNET` environment variable. Updated the README.md file with instructions on how to use this feature.

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ RELAY_URL="wss://wot.utxo.one"
 DB_PATH="db"
 INDEX_PATH="templates/index.html"
 STATIC_PATH="templates/static"
+ENABLE_CLEARNET=false
