chore: Optimized docker container with github action

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
     container_name: wot-relay
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile-optimized
     env_file:
       - .env
     volumes:
       - "./db:/app/db" # only change the left side before the colon
-      - "./templates/index.html:/app/templates/index.html" # only change the left side before the colon
-      - "./templates/static:/app/templates/static" # only change the left side before the colon
+      # - "./templates/index.html:/app/templates/index.html" # only change the left side before the colon
+      # - "./templates/static:/app/templates/static" # only change the left side before the colon
     ports:
       - "3334:3334"
