update refresh interval on readme, add archiving logging

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ RELAY_URL="wss://wot.utxo.one"
 
 # where we should store the database
 DB_PATH="db"
+# what engine to use for the database: lmdb, badger
+DB_ENGINE="lmdb"
 
 # where we should store the index.html and static files
 INDEX_PATH="templates/index.html"
@@ -14,4 +16,4 @@ STATIC_PATH="templates/static"
 # relay behavior
 
 # how often to refresh the relay's view of the WoT in HOURS
-REFRESH_INTERVAL_HOURS=24
+REFRESH_INTERVAL_HOURS=1
