--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,12 +12,15 @@ jobs:
   make-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/create-release@latest
+      - name: Create Release
+        uses: actions/create-release@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}
+          release_name: ${{ github.ref_name }}
+        continue-on-error: true
+
   build-all-for-all:
     runs-on: ubuntu-latest
     needs:
