--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install build-essential and LMDB development files
-        run: sudo apt-get update && sudo apt-get install -y build-essential liblmdb-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential liblmdb-dev
 
       - name: Create Release
         uses: actions/create-release@latest
@@ -43,7 +45,18 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install build-essential and LMDB development files
-        run: sudo apt-get update && sudo apt-get install -y build-essential liblmdb-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential liblmdb-dev
+
+      - name: Set CGO_ENABLED=1
+        run: |
+          export CGO_ENABLED=1
+
+      - name: Build application with Go
+        run: |
+          go env   # Print Go environment details for debugging
+          go build ./...
 
       - uses: wangyoucao577/go-release-action@v1.40
         with:
