update readme with minimum followers

--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,11 @@ RELAY_URL="wss://wot.utxo.one"
 DB_PATH="db"
 
 # where we should store the index.html and static files
-INDEX_PATH="templates/index.html"
-STATIC_PATH="templates/static"
+INDEX_PATH="/mnt/dev/bitvora/wot-relay/templates/index.html"
+STATIC_PATH="/mnt/dev/bitvora/wot-relay/templates/static/"
 
 # relay behavior
 
 # how often to refresh the relay's view of the WoT in HOURS
 REFRESH_INTERVAL_HOURS=1
+MINIMUM_FOLLOWERS=5
