--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ STATIC_PATH="/mnt/dev/bitvora/wot-relay/templates/static/"
 # how often to refresh the relay's view of the WoT in HOURS
 REFRESH_INTERVAL_HOURS=1
 MINIMUM_FOLLOWERS=5
+
+# archive all notes from everyone in your WoT from other relays
+ARCHIVAL_SYNC="FALSE"
