--- a/docker-compose.tor.yml
+++ b/docker-compose.tor.yml
@@ -8,8 +8,8 @@ services:
       - .env
     volumes:
       - "./db:/app/db"
-      - "./templates/index.html:/app/templates/index.html"
-      - "./templates/static:/app/templates/static"
+      - "./templates/index.html:${INDEX_PATH}"
+      - "./templates/static:${STATIC_PATH}"
     ports:
       - "3334"
 
