--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ MINIMUM_FOLLOWERS=5
 
 # archive all notes from everyone in your WoT from other relays
 ARCHIVAL_SYNC="FALSE"
+
+# optional, certain note kinds older than this many days will be deleted
+MAX_AGE_DAYS=365
