disable reaction archiving, use map to allow posting

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ MINIMUM_FOLLOWERS=5
 
 # archive all notes from everyone in your WoT from other relays
 ARCHIVAL_SYNC="FALSE"
+ARCHIVE_REACTIONS="FALSE" # optional, reactions take up a lot of space and compute
 
 # optional, certain note kinds older than this many days will be deleted
 MAX_AGE_DAYS=365
