ignore follow list for people who follow spammers

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ ARCHIVE_REACTIONS="FALSE" # optional, reactions take up a lot of space and compu
 
 # optional, certain note kinds older than this many days will be deleted
 MAX_AGE_DAYS=365
+
+# comma delimited list of pubkeys who follow bots and ruin the WoT
+IGNORE_FOLLOWS_LIST=""
